# SharkMCP

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
sharkmcp/: server.py  sharkd.py
tests/: test_server.py  test_sharkd.py
